ExprArmorSlot With EquipmentSlots (#7906)